Correct notification driver
The notification driver setup was resulting in the driver and connection string
on the same line. This is caused by the case statement and how jinja formats
the template when a case statement is present. This change modifies how the
driver string is created using a ternary, which will eliminate the case
statement and render the value of the diver correctly.

Change-Id: I9614af2d8a7e908327d2c8ee64f75070dbccfb08
Signed-off-by: Kevin Carter <kevin.carter@rackspace.com>

--- a/templates/blazar.conf.j2
+++ b/templates/blazar.conf.j2
@@ -11,7 +11,7 @@ transport_url = {{ blazar_oslomsg_rpc_transport }}://{% for host in blazar_oslom
 ssl = {{ blazar_oslomsg_notify_use_ssl | bool }}
 
 [oslo_messaging_notifications]
-driver = {% if blazar_ceilometer_enabled %}messagingv2{% else %}noop{% endif %}
+driver = {{ (blazar_ceilometer_enabled | bool) | ternary('messagingv2', 'noop') }}
 transport_url = {{ blazar_oslomsg_notify_transport }}://{% for host in blazar_oslomsg_notify_servers.split(',') %}{{ blazar_oslomsg_notify_userid }}:{{ blazar_oslomsg_notify_password }}@{{ host }}:{{ blazar_oslomsg_notify_port }}{% if not loop.last %},{% else %}/{{ blazar_oslomsg_notify_vhost }}{% if (blazar_oslomsg_notify_use_ssl | lower) | bool %}?ssl=1{% else %}?ssl=0{% endif %}{% endif %}{% endfor %}
 
 
