--- a/templates/blazar.conf.j2
+++ b/templates/blazar.conf.j2
@@ -31,7 +31,7 @@ service_token_roles = {{ blazar_service_token_roles | join(',') }}
 service_type = {{ blazar_service_type }}
 
 [database]
-connection = mysql+pymysql://{{ blazar_galera_user }}:{{ blazar_container_mysql_password }}@{{ blazar_galera_address }}/{{ blazar_galera_database }}?charset=utf8{% if blazar_galera_use_ssl | bool %}&ssl_verify_cert=true{% if blazar_galera_ssl_ca_cert | length > 0 %}&ssl_ca={{ blazar_galera_ssl_ca_cert }}{% endif %}{% endif +%}
+connection = mysql+pymysql://{{ blazar_galera_user }}:{{ blazar_container_mysql_password }}@{{ blazar_galera_address }}:{{ blazar_galera_port }}/{{ blazar_galera_database }}?charset=utf8{% if blazar_galera_use_ssl | bool %}&ssl_verify_cert=true{% if blazar_galera_ssl_ca_cert | length > 0 %}&ssl_ca={{ blazar_galera_ssl_ca_cert }}{% endif %}{% endif +%}
 max_overflow = {{ blazar_db_max_overflow }}
 max_pool_size = {{ blazar_db_max_pool_size }}
 pool_timeout = {{ blazar_db_pool_timeout }}
