--- a/templates/blazar.conf.j2
+++ b/templates/blazar.conf.j2
@@ -4,6 +4,18 @@ use_journal = True
 host=0.0.0.0
 port={{ blazar_service_port }}
 
+endpoint_type = internal
+os_region_name = {{ blazar_service_region }}
+os_admin_project_name = {{ blazar_service_project_name }}
+os_admin_username = {{ blazar_service_user_name }}
+os_admin_password = {{ blazar_service_password }}
+os_auth_port = {{ keystone_service_port }}
+os_auth_host = {{ internal_lb_vip_address }}
+os_auth_protocol = {{ keystone_service_internaluri_proto }}
+os_admin_user_domain_name = {{ blazar_service_user_domain_id }}
+os_admin_project_domain_name = {{ blazar_service_project_domain_id }}
+os_auth_version = v3
+
 # oslo.messaging default transport
 transport_url = {{ blazar_oslomsg_rpc_transport }}://{% for host in blazar_oslomsg_rpc_servers.split(',') %}{{ blazar_oslomsg_rpc_userid }}:{{ blazar_oslomsg_rpc_password }}@{{ host }}:{{ blazar_oslomsg_rpc_port }}{% if not loop.last %},{% else %}/{{ _blazar_oslomsg_rpc_vhost_conf }}{% if blazar_oslomsg_rpc_use_ssl | bool %}?ssl=1&ssl_version={{ blazar_oslomsg_rpc_ssl_version }}&ssl_ca_file={{ blazar_oslomsg_rpc_ssl_ca_file }}{% else %}?ssl=0{% endif %}{% endif %}{% endfor %}
 
@@ -23,13 +35,16 @@ transport_url = {{ blazar_oslomsg_notify_transport }}://{% for host in blazar_os
 plugins=physical.host.plugin,virtual.instance.plugin
 
 [keystone_authtoken]
-auth_type={{ blazar_keystone_auth_plugin }}
-project_domain_name={{ blazar_service_project_domain_id }}
-project_name={{ blazar_service_user_domain_id }}
-user_domain_name={{ blazar_service_user_domain_id }}
-username={{ blazar_service_user_name }}
-password={{ blazar_service_password }}
-auth_url={{ keystone_service_adminuri }}
+auth_type = {{ blazar_keystone_auth_plugin }}
+project_domain_name = {{ blazar_service_project_domain_id }}
+project_name = {{ blazar_service_project_name }}
+user_domain_name = {{ blazar_service_user_domain_id }}
+username = {{ blazar_service_user_name }}
+password = {{ blazar_service_password }}
+www_authenticate_uri = {{ keystone_service_internaluri }}
+auth_url = {{ keystone_service_internaluri }}
+region_name = {{ blazar_service_region }}
+insecure = {{ keystone_service_internaluri_insecure | bool }}
 service_token_roles_required = {{ blazar_service_token_roles_required | bool }}
 service_token_roles = {{ blazar_service_token_roles | join(',') }}
 service_type = {{ blazar_service_type }}
@@ -40,3 +55,12 @@ max_overflow = {{ blazar_db_max_overflow }}
 max_pool_size = {{ blazar_db_max_pool_size }}
 pool_timeout = {{ blazar_db_pool_timeout }}
 connection_recycle_time = {{ blazar_db_connection_recycle_time }}
+
+[neutron]
+endpoint_type = internal
+
+[nova]
+endpoint_type = internal
+
+[placement]
+endpoint_type = internal
