Create required freepool aggregate
For normal functioning of Blazar reservation it expects a nova agregate exist
to be used for host reservation.

Thus, to make deployment more convenient for deployer we add fuctionality
of creating such aggregate.

Depends-On: https://review.opendev.org/c/openstack/openstack-ansible/+/904786
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-plugins/+/878794
Change-Id: I7f56b8c8f2394d5fae1476441c8e2e2a5f07467c

--- a/templates/blazar.conf.j2
+++ b/templates/blazar.conf.j2
@@ -61,6 +61,7 @@ endpoint_type = internal
 
 [nova]
 endpoint_type = internal
+aggregate_freepool_name = {{ blazar_nova_aggregate_name }}
 
 [placement]
 endpoint_type = internal
