--- a/templates/blazar.conf.j2
+++ b/templates/blazar.conf.j2
@@ -49,6 +49,10 @@ service_token_roles_required = {{ blazar_service_token_roles_required | bool }}
 service_token_roles = {{ blazar_service_token_roles | join(',') }}
 service_type = {{ blazar_service_type }}
 
+memcached_servers = {{ blazar_memcached_servers }}
+memcache_security_strategy = ENCRYPT
+memcache_secret_key = {{ memcached_encryption_key }}
+
 [database]
 connection = mysql+pymysql://{{ blazar_galera_user }}:{{ blazar_container_mysql_password }}@{{ blazar_galera_address }}:{{ blazar_galera_port }}/{{ blazar_galera_database }}?charset=utf8{% if blazar_galera_use_ssl | bool %}&ssl_verify_cert=true{% if blazar_galera_ssl_ca_cert | length > 0 %}&ssl_ca={{ blazar_galera_ssl_ca_cert }}{% endif %}{% endif +%}
 max_overflow = {{ blazar_db_max_overflow }}
