Implement variables to address oslo.messaging improvements
During last release cycle oslo.messaging has landed [1] series of extremely
useful changes that are designed to implement modern messaging
techniques for rabbitmq quorum queues.

Since these changes are breaking and require queues being re-created,
it makes total sense to align these with migration to quorum queues by default.

[1] https://review.opendev.org/q/topic:%22bug-2031497%22

Change-Id: I10a5d4c14aca341bb4ba9272fc919ec050670c20

--- a/templates/blazar.conf.j2
+++ b/templates/blazar.conf.j2
@@ -26,6 +26,10 @@ lock_path = /run/lock/{{ blazar_services['blazar-api']['service_name'] }}/uwsgi
 [oslo_messaging_rabbit]
 ssl = {{ blazar_oslomsg_notify_use_ssl | bool }}
 rabbit_quorum_queue = {{ blazar_oslomsg_rabbit_quorum_queues }}
+rabbit_transient_quorum_queue = {{ blazar_oslomsg_rabbit_transient_quorum_queues }}
+rabbit_qos_prefetch_count = {{ blazar_oslomsg_rabbit_qos_prefetch_count }}
+use_queue_manager = {{ blazar_oslomsg_rabbit_queue_manager }}
+rabbit_stream_fanout = {{ blazar_oslomsg_rabbit_stream_fanout }}
 rabbit_quorum_delivery_limit = {{ blazar_oslomsg_rabbit_quorum_delivery_limit }}
 rabbit_quorum_max_memory_bytes = {{ blazar_oslomsg_rabbit_quorum_max_memory_bytes }}
 {% endif %}
