--- a/templates/blazar.conf.j2
+++ b/templates/blazar.conf.j2
@@ -19,6 +19,9 @@ os_auth_version = v3
 # oslo.messaging default transport
 transport_url = {{ blazar_oslomsg_rpc_transport }}://{% for host in blazar_oslomsg_rpc_servers.split(',') %}{{ blazar_oslomsg_rpc_userid }}:{{ blazar_oslomsg_rpc_password }}@{{ host }}:{{ blazar_oslomsg_rpc_port }}{% if not loop.last %},{% else %}/{{ _blazar_oslomsg_rpc_vhost_conf }}{% if blazar_oslomsg_rpc_use_ssl | bool %}?ssl=1&ssl_version={{ blazar_oslomsg_rpc_ssl_version }}&ssl_ca_file={{ blazar_oslomsg_rpc_ssl_ca_file }}{% else %}?ssl=0{% endif %}{% endif %}{% endfor %}
 
+[oslo_concurrency]
+lock_path = /run/lock/{{ blazar_services['blazar-api']['service_name'] }}/uwsgi
+
 {% if blazar_oslomsg_rpc_transport == 'rabbit' %}
 [oslo_messaging_rabbit]
 ssl = {{ blazar_oslomsg_notify_use_ssl | bool }}
