--- a/templates/blazar.conf.j2
+++ b/templates/blazar.conf.j2
@@ -29,6 +29,9 @@ rabbit_quorum_queue = {{ blazar_oslomsg_rabbit_quorum_queues }}
 rabbit_transient_quorum_queue = {{ blazar_oslomsg_rabbit_transient_quorum_queues }}
 rabbit_qos_prefetch_count = {{ blazar_oslomsg_rabbit_qos_prefetch_count }}
 use_queue_manager = {{ blazar_oslomsg_rabbit_queue_manager }}
+{% if blazar_oslomsg_rabbit_queue_manager %}
+hostname = {{ [ansible_facts['hostname'], blazar_service_name] | join('-') }}
+{% endif %}
 rabbit_stream_fanout = {{ blazar_oslomsg_rabbit_stream_fanout }}
 rabbit_quorum_delivery_limit = {{ blazar_oslomsg_rabbit_quorum_delivery_limit }}
 rabbit_quorum_max_memory_bytes = {{ blazar_oslomsg_rabbit_quorum_max_memory_bytes }}
